# aws-observability-mcp-server

./: README.md  pyproject.toml
src/aws_observability_mcp/: __init__.py  server.py
src/aws_observability_mcp/tools/: __init__.py  aws_health.py  cloudwatch_alarms.py  cloudwatch_logs.py  cost_explorer.py  ec2_observability.py  ecs_observability.py  lambda_observability.py  rds_observability.py  sns_sqs_observability.py  xray_traces.py
