[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aws-observability-mcp-server"
version = "0.1.0"
description = "MCP server exposing AWS observability tools for LLM-powered incident investigation"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["mcp", "aws", "observability", "cloudwatch", "bedrock", "llm"]
authors = [
  { name = "Prem Pratap Kommuru", email = "Prempratapk@gmail.com" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "mcp[cli]>=1.5.0",
  "boto3>=1.34.0",
  "botocore>=1.34.0",
  "pydantic>=2.0.0",
  "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "moto[cloudwatch,logs,xray]>=5.0.0",
  "ruff>=0.4.0",
  "mypy>=1.9.0",
]

[project.scripts]
aws-observability-mcp = "aws_observability_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/aws_observability_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
